DRONA-008 : Updating README.md